Fix game content div scrollbars in chrome

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,7 +70,7 @@
   justify-content: center;
   align-items: center;
   max-height: 35vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .gameControls {
